yml author duplicate

--- a/_issue01/section1/article2.html
+++ b/_issue01/section1/article2.html
@@ -13,7 +13,7 @@ names:
 bio: [leonov]
 media_path: "issue01/section1/foldername/"
 description: "short description for metadata and twitter"
-meta_image: issue01/section1/foldername/filename.jpg
+meta_image: filename.jpg
 ---
 
 <p><strong>Abstract</strong>: your abstract here.</p>
