--- a/_issue01/special-feature/item1.html
+++ b/_issue01/special-feature/item1.html
@@ -17,7 +17,7 @@ related_path: "issue01/special-feature/"
 feature_menu: feature
 feature_home: feature-intro.html
 description: "tweetable sentence for metadata"
-meta_image: "issue01/special-feature/foldername/filename.jpg"
+meta_image: "filename.jpg"
 ---
 
 <p><strong>Abstract</strong>: your abstract here.</p>
