--- a/_issue01/special-feature/item3.html
+++ b/_issue01/special-feature/item3.html
@@ -6,7 +6,6 @@ issue: 01
 year: 201x
 DOI: xxx.xxx
 title: "Name of item"
-author: "Buzz ALdrin"
 names:
  - firstname: Buzz
    lastname: Aldrin
@@ -17,14 +16,13 @@ related_path: "issue01/special-feature/"
 feature_menu: feature
 feature_home: feature-intro.html
 description: "tweetable sentence for metadata"
-meta_image: "issue01/special-feature/foldername/filename.jpg"
+meta_image: "filename.jpg"
 ---
 
 
 <p><strong>Abstract</strong>: your abstract here.</p>
 
 <p><strong>Keywords</strong>: keywords for metadata.</p>
-
 
 <hr>
 
