--- a/_issue01/section1/article1.html
+++ b/_issue01/section1/article1.html
@@ -22,7 +22,7 @@ names:
 bio: [gagarin, tereshkova, ride, jemison]
 media_path: "issue01/section1/foldername/"
 description: "short description for metadata and twitter"
-meta_image: issue01/section1/foldername/filename.jpg
+meta_image: filename.jpg
 ---
 
 <p><strong>Abstract</strong>: your abstract here.</p>
