--- a/_issue01/special-feature/feature-intro.html
+++ b/_issue01/special-feature/feature-intro.html
@@ -16,7 +16,7 @@ media_path: "issue01/special-feature/foldername/"
 related_path: "issue01/special-feature/"
 feature_menu: feature1
 description: "tweetable sentence for metadata."
-meta_image: "issue01/special-feature/foldername/filename.jpg"
+meta_image: "filename.jpg"
 ---
 
 <p><strong>Abstract</strong>: your abstract here.</p>
