break out media yml

--- a/_issue01/index.html
+++ b/_issue01/index.html
@@ -11,7 +11,9 @@ subtopic:
 editor: [name of editor]
 categories: [section1, section2, special feature]
 description: "Tweetable description for metadata."
-meta_image: "issue01/foldername/filename.jpg"
+media:
+ - path: "issue01/foldername/"
+   default: filename.jpg
 ---
 
 <!-- 
