--- a/_issue01/section1/article1.html
+++ b/_issue01/section1/article1.html
@@ -20,9 +20,10 @@ names:
    lastname: Jemison
    affiliation: a place 
 bio: [gagarin, tereshkova, ride, jemison]
-media_path: "issue01/section1/foldername/"
 description: "short description for metadata and twitter"
-meta_image: filename.jpg
+media:
+ - path: "issue01/section1/foldername/"
+   default: filename.jpg
 ---
 
 <p><strong>Abstract</strong>: your abstract here.</p>
