--- a/_issue01/section2/article1.html
+++ b/_issue01/section2/article1.html
@@ -11,9 +11,10 @@ names:
    lastname: Ride
    affiliation: a place
 bio: [ride]
-media_path: "issue01/section1/foldername/"
 description: "Short description for metadata and twitter"
-meta_image: filename.jpg
+media:
+ - path: "issue01/section2/foldername/"
+   default: filename.jpg
 ---
 
 <p><strong>Abstract</strong>: your abstract here.</p>
