--- a/_issue01/special-feature/item2.html
+++ b/_issue01/special-feature/item2.html
@@ -12,12 +12,14 @@ names:
    lastname: Sharma
    affiliation: place
 bio: [sharma]
-media_path: "issue01/special-feature/foldername/"
-related_path: "issue01/special-feature/"
-feature_menu: feature
-feature_home: feature-intro.html
 description: "tweetable sentence for metadata"
-meta_image: "filename.jpg"
+feature:
+ - menu: feature1
+   home: feature-intro.html
+   path: "issue01/special-feature/"
+media:
+ - path: "issue01/special-feature/foldername/"
+   default: filename.jpg
 ---
 
 <p><strong>Abstract</strong>: your abstract here.</p>
