--- a/_issue01/section1/article3.html
+++ b/_issue01/section1/article3.html
@@ -11,9 +11,10 @@ names:
    lastname: Jemison
    affiliation: a place
 bio: [jemison]
-media_path: "issue01/section1/foldername/"
 description: "short description for metadata and twitter"
-meta_image: filename.jpg
+media:
+ - path: "issue01/section1/foldername/"
+   default: filename.jpg
 ---
 
 <p><strong>Abstract</strong>: your abstract here.</p>
