--- a/_issue01/special-feature/item3.html
+++ b/_issue01/special-feature/item3.html
@@ -11,12 +11,14 @@ names:
    lastname: Aldrin
    affiliation: place
 bio: [aldrin]
-media_path: "issue01/special-feature/foldername/"
-related_path: "issue01/special-feature/"
-feature_menu: feature
-feature_home: feature-intro.html
 description: "tweetable sentence for metadata"
-meta_image: "filename.jpg"
+feature:
+ - menu: feature1
+   home: feature-intro.html
+   path: "issue01/special-feature/"
+media:
+ - path: "issue01/special-feature/foldername/"
+   default: filename.jpg
 ---
 
 
