move author gen to data method

--- a/_issue01/section1/article1.html
+++ b/_issue01/section1/article1.html
@@ -5,21 +5,8 @@ type: issue01
 issue: 01
 year: 200x
 DOI: xxx.xxx
-title: Multiauthor Essay
-names:
- - firstname: Yuri
-   lastname: Gagarin
-   affiliation: a place
- - firstname: Valentina
-   lastname: Tereshkova
-   affiliation: a place
- - firstname: Sally
-   lastname: Ride
-   affiliation: a place
- - firstname: Mae
-   lastname: Jemison
-   affiliation: a place 
-bio: [gagarin, tereshkova, ride, jemison]
+title: Multiauthor Article
+bio: [gagarin, tereshkova, ride, aldrin]
 description: "short description for metadata and twitter"
 media:
  - path: "issue01/section1/foldername/"
