citation generator debug

--- a/_issue01/special-feature/another-feature-intro.html
+++ b/_issue01/special-feature/another-feature-intro.html
@@ -6,12 +6,7 @@ issue: 01
 year: 201x
 DOI: xxx.xxx
 title: "title of another special feature"
-names:
- - firstname: Another
-   lastname: Author
-   role: Curated by
-   affiliation: a place
-bio: [tereshkova]
+bio: [aldrin]
 description: "tweetable sentence for metadata."
 feature:
  - menu: feature2
