--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 ---
 layout: root
-title: "404 - Page Not Found"
+title: "404 - Oops, page Not Found"
 author: Editor
 subtitle: "You Might Be Lost"
 description: "Yeah, pretty sure you're lost"
